2003-08-11  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* configure.in:
	Version 0.5.1.

2003-08-11  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't exit if we can't find a CD-ROM drive.

2003-08-07  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.[ch]:
	Added functions to free TrackDetails* and AlbumDetails*.

2003-08-07  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Free the previous album.

2003-08-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Add defaults for the file and path patterns.

	* src/sj-prefs.c:
	If we get null for the file and path patterns, hack in a
	default. Fixes a crash if the user hasn't set these preferences in
	earlier versions... whoops.

2003-08-04  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-08-01  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix a warning if actual track length is greater than the reported
	length.
	
	* src/sj-extractor.c:
	Use lowercase metadata tag names to work better with GStreamer.

	Thanks to Bastien again.

2003-07-31  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Prepare for 0.5.

2003-07-31  Jordi Mallach  <jordi@sindominio.net>

	* src/sj-main.c: Add a missing shortcut.

2003-07-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Add a missing shortcut.

	* src/sj-main.c:
	Fix a typo.

2003-07-30  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	On End Of Stream, set the pipe line to NULL instead of READY so
	that all of the data is flushed. I hope.
	
2003-07-30  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	When editing the album name/title, propogate the change to the
	tracks. Thanks to Mike Hearn again.
	
2003-07-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make the album title and artist fields GtkEntrys

	* src/sj-main.c:
	Handle editing the album title and artist fields. If the artist is