@@ -1,3 +1,10 @@
+2003-08-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/cd-drive.c: (linux_bsd_media_type), (get_device_max_speed),
+	(get_scsi_cd_name), (add_linux_cd_recorder), (linux_scan):
+	* src/cd-drive.h: upd from libbacon, faster startup if a CD happened
+	to be mounted in one of the CD drives
+
 2003-08-11  Ross Burton  <ross@burtonini.com>
 
 	* NEWS:
